--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "05-11ty-external-data",
+  "name": "eleventy",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,7 +9,8 @@
     "watch:eleventy": "eleventy --serve",
     "build:eleventy": "eleventy",
     "start": "npm-run-all build:sass --parallel watch:*",
-    "build": "npm-run-all build:*"
+    "build": "npm-run-all build:*",
+    "deploy": "gh-pages -d _site"
   },
   "keywords": [],
   "author": "",
@@ -18,5 +19,9 @@
     "@11ty/eleventy": "^0.12.1",
     "npm-run-all": "^4.1.5",
     "sass": "^1.32.8"
-  }
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
+  },
+  "homepage": "/public"
 }
